<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_default"
    android:paddingTop="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_default"
    tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/play_image_view"
        style="@style/main_card_view_style">

        <TextView
            style="@style/card_text_view_style"
            android:drawableStart="@drawable/main_icon_1"
            android:text="@string/play" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/add_game_image_view"
        style="@style/main_card_view_style">

        <TextView
            style="@style/card_text_view_style"
            android:drawableStart="@drawable/main_icon_2"
            android:text="@string/add_game" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/exit_image_view"
        style="@style/main_card_view_style">

        <TextView
            style="@style/card_text_view_style"
            android:drawableStart="@drawable/main_icon_3"
            android:text="@string/exit" />

    </android.support.v7.widget.CardView>

</LinearLayout>