<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddGameActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/gameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/game_title"
        android:textAlignment="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/words_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <Button
            android:id="@+id/add_word_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_another_word"
            android:textAppearance="@style/main_text_style"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/save_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAppearance="@style/main_text_style"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</LinearLayout>